added the header content with position.

--- a/contacts.html
+++ b/contacts.html
@@ -53,9 +53,13 @@
             </ul>
         </nav>
         <main class="contacts-main-content">
-            <header class="main-header">
-
-            </header>
+        <header class="main-header">          
+          <div class="summary-header-text">Kanban Project Management Tool</div>
+          <div class="summary-profil">
+            <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+            <div class="profil-header"></div>
+          </div>
+        </header>
 
             <div class="contacts-content content-limit">
                 <section class="contact-list-area">
