--- a/board.html
+++ b/board.html
@@ -75,9 +75,15 @@
       </ul>
     </nav>
         <main>
-            <header class="main-header">
-                
-            </header>
+
+        <header class="main-header">          
+          <div class="summary-header-text">Kanban Project Management Tool</div>
+          <div class="summary-profil">
+            <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+            <div class="profil-header"></div>
+          </div>
+        </header>
+
             <section class="board-page">
                 <header class="board-header">
                     <h2>Board</h2>
