--- a/add_task.html
+++ b/add_task.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Add Task</title>
-
+ <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg">
   <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/add_task.css" />
   <script src="./script/add_task.js"></script>
@@ -105,9 +105,20 @@
         </ul>
       </div>
     </nav>
-    <main>
-      <header class="main-header"></header>
-      <section class="">
+    <main class="w100">
+      <header class="main-contacts-header">
+                <div class="summary-header">
+                    <div class="content-limit-header">
+                        <div class="summary-header-text">Kanban Project Management Tool</div>
+                        <div class="summary-profil">
+                            <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+                            <div class="profil-header"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </header>
+      <section  class="w90">
         <h2>Add Task</h2>
         <form action="">
           <div class="input_container w80">
