--- a/board.html
+++ b/board.html
@@ -83,7 +83,15 @@
         </ul>
       </nav>
       <main>
-        <header class="main-header"></header>
+        <header>
+                <div class="content-limit-header">
+                    <div class="header-text">Kanban Project Management Tool</div>
+                    <div class="header-profil">
+                        <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+                        <div class="profil-header"></div>
+                    </div>
+                </div>
+            </header>
         <section class="board-page">
           <header class="board-header">
             <h2>Board</h2>
