--- a/contacts.html
+++ b/contacts.html
@@ -109,16 +109,13 @@
             </div>
         </nav>
         <main class="contacts-main-content">
-            <header class="main-contacts-header">
-                <div class="summary-header">
-                    <div class="content-limit-header">
-                        <div class="summary-header-text">Kanban Project Management Tool</div>
-                        <div class="summary-profil">
-                            <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
-                            <div class="profil-header"></div>
-                        </div>
+            <header>
+                <div class="content-limit-header">
+                    <div class="header-text">Kanban Project Management Tool</div>
+                    <div class="header-profil">
+                        <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+                        <div class="profil-header"></div>
                     </div>
-
                 </div>
             </header>
 
