--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body onload="init()">
 
-    <section class="overlay">
+    <section class="overlay_animation">
         <div class="animation_join_logo">
             <svg xmlns="http://www.w3.org/2000/svg" width="274" height="335" viewBox="0 0 274 335" fill="none">
                 <path d="M196.314 0H135.623V69.8251H196.314V0Z" fill="#2A3647" />
