Add reload action to Clear button
The Clear button now reloads the page when clicked by adding an onclick handler with location.reload().

--- a/add_task.html
+++ b/add_task.html
@@ -770,7 +770,7 @@
               </div>
 
               <div class="submit_butn_wrapper">
-                <button class="clear_btn">
+                <button class="clear_btn" onclick="location.reload()">
                   Clear
                   <!-- iconoir_cancel.svg -->
                   <svg
