--- a/summary.html
+++ b/summary.html
@@ -99,7 +99,28 @@
           <section class="summary-board-container">
             <div class="summary-board-panels">
               <div class="summary-board-panel s-panel-gap">
-                <img src="./assets/svg/pencil_1.svg" class="s-img" alt="" />
+                <div class="icon-wrap">
+                  <svg
+                    class="icon-edit"
+                    width="32"
+                    height="32"
+                    viewBox="0 0 25 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M3.16667 22.3332H5.03333L16.5333 10.8332L14.6667 
+                      8.9665L3.16667 20.4665V22.3332ZM22.2333 8.89984L16.5667 
+                      3.29984L18.4333 1.43317C18.9444 0.922059 19.5722 0.666504 
+                      20.3167 0.666504C21.0611 0.666504 21.6889 0.922059 
+                      22.2 1.43317L24.0667 3.29984C24.5778 3.81095 24.8444 
+                      4.42761 24.8667 5.14984C24.8889 5.87206 24.6444 
+                      6.48873 24.1333 6.99984L22.2333 8.89984ZM20.3 
+                      10.8665L6.16667 24.9998H0.5V19.3332L14.6333 
+                      5.19984L20.3 10.8665Z"
+                    />
+                  </svg>
+                </div>
                 <div class="tasks-In-ToDo">
                   <div class="s-txt-64-600">2</div>
                   <div class="s-txt-20-400">ToDo</div>
@@ -107,7 +128,24 @@
               </div>
 
               <div class="summary-board-panel s-panel-gap">
-                <img src="./assets/svg/right_1.svg" class="s-img" alt="" />
+                <div class="icon-wrap-2">
+                  <svg
+                    class="icon-arrow"
+                    width="38"
+                    height="30"
+                    viewBox="0 0 38 30"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M4.02832 15.0001L15.2571 26.0662L33.9717 3.93408"
+                      stroke="white"
+                      stroke-width="7"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      fill="none"
+                    />
+                  </svg>
+                </div>
                 <div class="tasks-In-Done">
                   <div class="s-txt-64-600">1</div>
                   <div class="s-txt-20-400">Done</div>
