Update legal notice and privacy policy content
Revised legal_notice.html to provide a more detailed legal notice, including terms of use, ownership, and contact information. Replaced placeholder content in privacy_police.html with a comprehensive privacy policy outlining data collection, processing, user rights, and contact details. Also fixed the page title in privacy_police.html.

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -65,11 +65,7 @@
               </a>
             </li>
             <li>
-              <a
-                class="navbar-link"
-                href="./add_task.html"
-                aria-current="page"
-              >
+              <a class="navbar-link" href="./add_task.html" aria-current="page">
                 <div class="navbar-link-content">
                   <svg
                     class="navbar_img"
@@ -188,60 +184,56 @@
           </div>
         </header>
         <section>
-            <div class="go_back" onclick="history.back()">
-          <svg 
-            width="22"
-            height="20"
-            viewBox="0 0 22 20"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M4.93725 8.66673H19.8333C20.5696 8.66673 21.1666 9.26368 21.1666 10.0001C21.1666 10.7364 20.5696 11.3334 19.8333 11.3334H4.93725L11.1466 17.5427C11.6672 18.0634 11.6672 18.9074 11.1466 19.4281C10.626 19.9487 9.78187 19.9487 9.26125 19.4281L1.24746 11.4143C0.466415 10.6332 0.466417 9.3669 1.24747 8.58585L9.26125 0.57206C9.78187 0.0514398 10.626 0.0514406 11.1466 0.572061C11.6672 1.09268 11.6672 1.93677 11.1466 2.45739L4.93725 8.66673Z"
-              fill="#29ABE2"
-            />
-          </svg>
-</div>
-          <h2>Help</h2>
+          <h2>Legal Notice</h2>
 
           <div class="instructions">
+            <h3 class="mb16">
+              Imprint <span class="highlight-join">Join</span>?
+            </h3>
             <p class="mb16">
-              Welcome to the help page for <span class="highlight-join">Join</span>, your guide to using our kanban
-              project management tool. Here, we'll provide an overview of what
-              <span class="highlight-join">Join</span> is, how it can benefit you, and how to use it.
-            </p>
-            <h3 class="mb16">What is <span class="highlight-join">Join</span>?</h3>
-            <p class="mb16">
-              <span class="highlight-join">Join</span> is a kanban-based project management tool designed and built
-              by a group of dedicated students as part of their web development
-              bootcamp at the Developer Akademie.
-            </p>
-            <p class="mb16">
-              Kanban, a Japanese term meaning "billboard", is a highly effective
-              method to visualize work, limit work-in-progress, and maximize
-              efficiency (or flow). <span class="highlight-join">Join</span> leverages the principles of kanban to
-              help users manage their tasks and projects in an intuitive, visual
-              interface.
-            </p>
-            <p class="mb16">
-              It is important to note that <span class="highlight-join">Join</span> is designed as an educational
-              exercise and is not intended for extensive business usage. While
-              we strive to ensure the best possible user experience, we cannot
-              guarantee consistent availability, reliability, accuracy, or other
-              aspects of quality regarding <span class="highlight-join">Join</span>.
+              Sven Degen <br />
+              Ifenthalerstrasse 30 <br />
+              CH - 4463 Hauenstein
             </p>
 
-            <h3 class="mb16">How to use it</h3>
-            <p class="mb16">Here is a step-by-step guide on how to use <span class="highlight-join">Join</span>:</p>
+            <h3>Exploring the Board</h3>
+            <p class="mb16">
+              email: <a href="mailto:sven.degen1998@gmail.com"></a>
+            </p>
+            <h3>Acceptance of terms</h3>
+            <p class="mb16">
+              By accessing and using Join (Product), you acknowledge and agree
+              to the following terms and conditions, and any policies,
+              guidelines, or amendments thereto that may be presented to you
+              from time to time. We, the listed students, may update or change
+              the terms and conditions from time to time without notice.
+            </p>
+
+            <h3>Scope and ownership of the product</h3>
+            <p class="mb16">
+              Join has been developed as part of a student group project in a
+              web development bootcamp at the Developer Akademie GmbH. It has an
+              educational purpose and is not intended for extensive personal &
+              business usage. As such, we cannot guarantee consistent
+              availability, reliability, accuracy, or any other aspect of
+              quality regarding this Product.
+            </p>
+            <p class="mb16">
+              The design of Join is owned by the Developer Akademie GmbH.
+              Unauthorized use, reproduction, modification, distribution, or
+              replication of the design is strictly prohibited. Here is a
+              step-by-step guide on how to use
+            </p>
             <div>
               <div class="how_to_list mb16">
                 <h4>1.</h4>
                 <div>
                   <h5>Exploring the Board</h5>
                   <p>
-                    When you log in to <span class="highlight-join">Join</span>, you'll find a default board. This
-                    board represents your project and contains four default
-                    lists: "To Do", "In Progress", “Await feedback” and "Done".
+                    When you log in to <span class="highlight-join">Join</span>,
+                    you'll find a default board. This board represents your
+                    project and contains four default lists: "To Do", "In
+                    Progress", “Await feedback” and "Done".
                   </p>
                 </div>
               </div>
@@ -250,11 +242,12 @@
                 <div>
                   <h5>Creating Contacts</h5>
                   <p>
-                    In <span class="highlight-join">Join</span>, you can add contacts to collaborate on your
-                    projects. Go to the "Contacts" section, click on "New
-                    contact", and fill in the required information. Once added,
-                    these contacts can be assigned tasks and they can interact
-                    with the tasks on the board.
+                    In <span class="highlight-join">Join</span>, you can add
+                    contacts to collaborate on your projects. Go to the
+                    "Contacts" section, click on "New contact", and fill in the
+                    required information. Once added, these contacts can be
+                    assigned tasks and they can interact with the tasks on the
+                    board.
                   </p>
                 </div>
               </div>
@@ -291,15 +284,22 @@
                     "Done" list or delete it. Deleting a card will permanently
                     remove it from the board. Please exercise caution when
                     deleting cards, as this action is irreversible. Remember
-                    that using <span class="highlight-join">Join</span> effectively requires consistent updates from
-                    you and your team to ensure the board reflects the current
-                    state of your project. Have more questions about <span class="highlight-join">Join</span>? Feel
-                    free to contact us at <a href="mailto:sven.degen1998@gmail.com"> sven.degen1998@gmail.com</a>. We're here to
-                    help you!
+                    that using
+                    <span class="highlight-join">Join</span> effectively
+                    requires consistent updates from you and your team to ensure
+                    the board reflects the current state of your project. Have
+                    more questions about
+                    <span class="highlight-join">Join</span>? Feel free to
+                    contact us at
+                    <a href="mailto:sven.degen1998@gmail.com">
+                      sven.degen1998@gmail.com</a
+                    >. We're here to help you!
                   </p>
                 </div>
               </div>
-              <h3 class="mb80">Enjoy using <span class="highlight-join">Join</span>!</h3>
+              <h3 class="mb80">
+                Enjoy using <span class="highlight-join">Join</span>!
+              </h3>
             </div>
           </div>
         </section>
