--- a/privacy_police.html
+++ b/privacy_police.html
@@ -284,13 +284,13 @@ We will only keep your personal information for as long as it is necessary for t
 
 When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymise such information, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.
 
-6. DO WE COLLECT INFORMATION FROM MINORS?
-In Short: We do not knowingly collect data from or market to children under 18 years of age.
+<h3 class="mb16" id="6">DO WE COLLECT INFORMATION FROM MINORS?</h3> 
+<p class="mb16">In Short: We do not knowingly collect data from or market to children under 18 years of age.
 
 We do not knowingly collect, solicit data from, or market to children under 18 years of age, nor do we knowingly sell such personal information. By using the Services, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent’s use of the Services. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we may have collected from children under age 18, please contact us at test@test.com.
-
-7. WHAT ARE YOUR PRIVACY RIGHTS?
-In Short: In some regions, such as the European Economic Area (EEA), United Kingdom (UK), and Switzerland, you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time, depending on your country, province, or state of residence.
+</p>
+<h3 class="mb16" id="7">WHAT ARE YOUR PRIVACY RIGHTS?</h3>
+<p class="mb16">In Short: In some regions, such as the European Economic Area (EEA), United Kingdom (UK), and Switzerland, you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time, depending on your country, province, or state of residence.
 
 In some regions (like the EEA, UK, and Switzerland), you have certain rights under applicable data protection laws. These may include the right (i) to request access and obtain a copy of your personal information, (ii) to request rectification or erasure; (iii) to restrict the processing of your personal information; (iv) if applicable, to data portability; and (v) not to be subject to automated decision-making. In certain circumstances, you may also have the right to object to the processing of your personal information. You can make such a request by contacting us by using the contact details provided in the section 'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.
 
@@ -309,24 +309,24 @@ Contact us using the contact information provided.
 Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, we may retain some information in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our legal terms and/or comply with applicable legal requirements.
 
 If you have questions or comments about your privacy rights, you may email us at test@test.com.
-
-8. CONTROLS FOR DO-NOT-TRACK FEATURES
-Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track ('DNT') feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage, no uniform technology standard for recognising and implementing DNT signals has been finalised. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this Privacy Notice.
-
-9. DO WE MAKE UPDATES TO THIS NOTICE?
-In Short: Yes, we will update this notice as necessary to stay compliant with relevant laws.
+</p>
+<h3 class="mb16" id="8">CONTROLS FOR DO-NOT-TRACK FEATURES</h3>
+<p class="mb16">Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track ('DNT') feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage, no uniform technology standard for recognising and implementing DNT signals has been finalised. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this Privacy Notice.
+</p>
+<h3 class="mb16" id="9">DO WE MAKE UPDATES TO THIS NOTICE?</h3>
+<p class="mb16">In Short: Yes, we will update this notice as necessary to stay compliant with relevant laws.
 
 We may update this Privacy Notice from time to time. The updated version will be indicated by an updated 'Revised' date at the top of this Privacy Notice. If we make material changes to this Privacy Notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this Privacy Notice frequently to be informed of how we are protecting your information.
-
-10. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?
-If you have questions or comments about this notice, you may email us at test@test.com or contact us by post at:
+</p>
+<h3 class="mb16" id="10">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</h3>
+<p class="mb16">If you have questions or comments about this notice, you may email us at test@test.com or contact us by post at:
 
 __________
 test_Address line 1
 test_City / town, test_State / territory / province test_ZIP code / postal code
 Germany
-
-11. HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?
+</p>
+<h3 class="mb16" id="11">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</h3>
 You have the right to request access to the personal information we collect from you, details about how we have processed it, correct inaccuracies, or delete your personal information. You may also have the right to withdraw your consent to our processing of your personal information. These rights may be limited in some circumstances by applicable law. To request to review, update, or delete your personal information, please visit: help.html.join.
 
         </section>
