worked on privacy policy

--- a/privacy_police.html
+++ b/privacy_police.html
@@ -185,7 +185,7 @@
         </header>
         <section>
           <h2>PRIVACY POLICY</h2>
-          <p>
+          <p class="mb32">
             Last updated September 30, 2025 This Privacy Notice for __________
             ('we', 'us', or 'our'), describes how and why we might access,
             collect, store, use, and/or share ('process') your personal
@@ -201,8 +201,8 @@
             test@test.com.
           </p>
 
-          <h3>SUMMARY OF KEY POINTS</h3>
-          <p class="mb16">
+          <h3 class="mb32">SUMMARY OF KEY POINTS</h3>
+          <p class="mb32">
             This summary provides key points from our Privacy Notice, but you
             can find out more details about any of these topics by clicking the
             link following each key point or by using our table of contents
@@ -237,39 +237,39 @@
             information we collect? Review the Privacy Notice in full.
           </p>
 
-          <h3>TABLE OF CONTENTS</h3>
+          <h3 class="mb32">TABLE OF CONTENTS</h3>
 
-          <ul>
-            <li><a href="">HOW DO WE PROCESS YOUR INFORMATION?</a></li>
-            <li><a href="">WHAT INFORMATION DO WE COLLECT?</a></li>
+          <ul class="mb32">
+            <li><a href="#1">HOW DO WE PROCESS YOUR INFORMATION?</a></li>
+            <li><a href="#2">WHAT INFORMATION DO WE COLLECT?</a></li>
             <li>
-              <a href=""
+              <a href="#3"
                 >WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL
                 INFORMATION?</a
               >
             </li>
             <li>
-              <a href=""
+              <a href="#4"
                 >WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</a
               >
             </li>
-            <li><a href="">HOW LONG DO WE KEEP YOUR INFORMATION?</a></li>
-            <li><a href="">DO WE COLLECT INFORMATION FROM MINORS?</a></li>
-            <li><a href="">WHAT ARE YOUR PRIVACY RIGHTS?</a></li>
-            <li><a href="">CONTROLS FOR DO-NOT-TRACK FEATURES</a></li>
-            <li><a href="">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
-            <li><a href="">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
+            <li><a href="#5">HOW LONG DO WE KEEP YOUR INFORMATION?</a></li>
+            <li><a href="#6">DO WE COLLECT INFORMATION FROM MINORS?</a></li>
+            <li><a href="#7">WHAT ARE YOUR PRIVACY RIGHTS?</a></li>
+            <li><a href="#8">CONTROLS FOR DO-NOT-TRACK FEATURES</a></li>
+            <li><a href="#9">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
+            <li><a href="#10">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
             <li>
-              <a href=""
+              <a href="#11"
                 >HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM
                 YOU?</a
               >
             </li>
           </ul>
 
-          <h3>WHAT INFORMATION DO WE COLLECT?</h3>
+          <h3 class="mb32" id="1">WHAT INFORMATION DO WE COLLECT?</h3>
 
-          <p>
+          <p class="mb32">
             Personal information you disclose to us In Short: We collect
             personal information that you provide to us. We collect personal
             information that you voluntarily provide to us when you register on
@@ -288,8 +288,8 @@
             APIs will adhere to Google API Services User Data Policy, including
             the Limited Use requirements.
           </p>
-          <h3>2. HOW DO WE PROCESS YOUR INFORMATION?</h3>
-          <p>
+          <h3 class="mb32" id="2">HOW DO WE PROCESS YOUR INFORMATION?</h3>
+          <p class="mb32">
             In Short: We process your information to provide, improve, and
             administer our Services, communicate with you, for security and
             fraud prevention, and to comply with law. We may also process your
@@ -303,10 +303,10 @@
             information when necessary to save or protect an individual’s vital
             interest, such as to prevent harm.
           </p>
-          <h3>
-            3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?
+          <h3 class="mb32" id="3">
+            WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?
           </h3>
-          <p>
+          <p class="mb32">
             In Short: We only process your personal information when we believe
             it is necessary and we have a valid legal reason (i.e. legal basis)
             to do so under applicable law, like with your consent, to comply
@@ -330,8 +330,8 @@
             as situations involving potential threats to the safety of any
             person.
           </p>
-          <h3>4. WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h3>
-          <p>
+          <h3 class="mb32" id="4">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</h3>
+          <p class="mb32">
             In Short: We may share information in specific situations described
             in this section and/or with the following third parties. We may need
             to share your personal information in the following situations:
@@ -340,8 +340,8 @@
             company assets, financing, or acquisition of all or a portion of our
             business to another company.
           </p>
-          <h3>5. HOW LONG DO WE KEEP YOUR INFORMATION?</h3>
-          <p>
+          <h3 class="mb32" id="5">HOW LONG DO WE KEEP YOUR INFORMATION?</h3>
+          <p class="mb32">
             In Short: We keep your information for as long as necessary to
             fulfil the purposes outlined in this Privacy Notice unless otherwise
             required by law. We will only keep your personal information for as
@@ -357,8 +357,8 @@
             archives), then we will securely store your personal information and
             isolate it from any further processing until deletion is possible.
           </p>
-          <h3 class="mb16" id="6">DO WE COLLECT INFORMATION FROM MINORS?</h3>
-          <p class="mb16">
+          <h3 class="mb32" id="6">DO WE COLLECT INFORMATION FROM MINORS?</h3>
+          <p class="mb32">
             In Short: We do not knowingly collect data from or market to
             children under 18 years of age. We do not knowingly collect, solicit
             data from, or market to children under 18 years of age, nor do we
@@ -372,8 +372,8 @@
             collected from children under age 18, please contact us at
             test@test.com.
           </p>
-          <h3 class="mb16" id="7">WHAT ARE YOUR PRIVACY RIGHTS?</h3>
-          <p class="mb16">
+          <h3 class="mb32" id="7">WHAT ARE YOUR PRIVACY RIGHTS?</h3>
+          <p class="mb32">
             In Short: In some regions, such as the European Economic Area (EEA),
             United Kingdom (UK), and Switzerland, you have rights that allow you
             greater access to and control over your personal information. You
@@ -415,8 +415,8 @@
             questions or comments about your privacy rights, you may email us at
             test@test.com.
           </p>
-          <h3 class="mb16" id="8">CONTROLS FOR DO-NOT-TRACK FEATURES</h3>
-          <p class="mb16">
+          <h3 class="mb32" id="8">CONTROLS FOR DO-NOT-TRACK FEATURES</h3>
+          <p class="mb32">
             Most web browsers and some mobile operating systems and mobile
             applications include a Do-Not-Track ('DNT') feature or setting you
             can activate to signal your privacy preference not to have data
@@ -429,8 +429,8 @@
             future, we will inform you about that practice in a revised version
             of this Privacy Notice.
           </p>
-          <h3 class="mb16" id="9">DO WE MAKE UPDATES TO THIS NOTICE?</h3>
-          <p class="mb16">
+          <h3 class="mb32" id="9">DO WE MAKE UPDATES TO THIS NOTICE?</h3>
+          <p class="mb32">
             In Short: Yes, we will update this notice as necessary to stay
             compliant with relevant laws. We may update this Privacy Notice from
             time to time. The updated version will be indicated by an updated
@@ -440,19 +440,19 @@
             you a notification. We encourage you to review this Privacy Notice
             frequently to be informed of how we are protecting your information.
           </p>
-          <h3 class="mb16" id="10">
+          <h3 class="mb32" id="10">
             HOW CAN YOU CONTACT US ABOUT THIS NOTICE?
           </h3>
-          <p class="mb16">
+          <p class="mb32">
             If you have questions or comments about this notice, you may email
             us at test@test.com or contact us by post at: __________
             test_Address line 1 test_City / town, test_State / territory /
             province test_ZIP code / postal code Germany
           </p>
-          <h3 class="mb16" id="11">
+          <h3 class="mb32" id="11">
             HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?
           </h3>
-          <p>
+          <p class="mb80">
             You have the right to request access to the personal information we
             collect from you, details about how we have processed it, correct
             inaccuracies, or delete your personal information. You may also have
