Update legal notice with new terms and remove guide
Revised the legal notice to clarify proprietary rights, usage terms, and liability disclaimers for Join. Removed the step-by-step usage guide and added sections on proprietary rights, use of the product, and disclaimer of warranties and liability.

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -188,7 +188,7 @@
 
           <div class="instructions">
             <h3 class="mb16">
-              Imprint <span class="highlight-join">Join</span>?
+              Imprint 
             </h3>
             <p class="mb16">
               Sven Degen <br />
@@ -202,7 +202,7 @@
             </p>
             <h3>Acceptance of terms</h3>
             <p class="mb16">
-              By accessing and using Join (Product), you acknowledge and agree
+              By accessing and using <span class="highlight-join">Join</span> (Product), you acknowledge and agree
               to the following terms and conditions, and any policies,
               guidelines, or amendments thereto that may be presented to you
               from time to time. We, the listed students, may update or change
@@ -211,96 +211,49 @@
 
             <h3>Scope and ownership of the product</h3>
             <p class="mb16">
-              Join has been developed as part of a student group project in a
-              web development bootcamp at the Developer Akademie GmbH. It has an
-              educational purpose and is not intended for extensive personal &
+              <span class="highlight-join">Join</span> has been developed as part of a student group project in a
+              web development bootcamp at the <span class="highlight-join">Developer Akademie GmbH</span>. It has an
+              educational purpose and is not intended for extensive personal &amp;
               business usage. As such, we cannot guarantee consistent
               availability, reliability, accuracy, or any other aspect of
               quality regarding this Product.
             </p>
             <p class="mb16">
-              The design of Join is owned by the Developer Akademie GmbH.
+              The design of <span class="highlight-join">Join</span> is owned by the <span class="highlight-join">Developer Akademie GmbH</span>.
               Unauthorized use, reproduction, modification, distribution, or
               replication of the design is strictly prohibited. Here is a
               step-by-step guide on how to use
             </p>
-            <div>
-              <div class="how_to_list mb16">
-                <h4>1.</h4>
-                <div>
-                  <h5>Exploring the Board</h5>
-                  <p>
-                    When you log in to <span class="highlight-join">Join</span>,
-                    you'll find a default board. This board represents your
-                    project and contains four default lists: "To Do", "In
-                    Progress", “Await feedback” and "Done".
-                  </p>
-                </div>
-              </div>
-              <div class="how_to_list mb16">
-                <h4>2.</h4>
-                <div>
-                  <h5>Creating Contacts</h5>
-                  <p>
-                    In <span class="highlight-join">Join</span>, you can add
-                    contacts to collaborate on your projects. Go to the
-                    "Contacts" section, click on "New contact", and fill in the
-                    required information. Once added, these contacts can be
-                    assigned tasks and they can interact with the tasks on the
-                    board.
-                  </p>
-                </div>
-              </div>
-              <div class="how_to_list mb16">
-                <h4>3.</h4>
-                <div>
-                  <h5>Adding Cards</h5>
-                  <p>
-                    Now that you've added your contacts, you can start adding
-                    cards. Cards represent individual tasks. Click the "+"
-                    button under the appropriate list to create a new card. Fill
-                    in the task details in the card, like task name,
-                    description, due date, assignees, etc.
-                  </p>
-                </div>
-              </div>
-              <div class="how_to_list mb16">
-                <h4>4.</h4>
-                <div>
-                  <h5>Moving Cards</h5>
-                  <p>
-                    As the task moves from one stage to another, you can reflect
-                    that on the board by dragging and dropping the card from one
-                    list to another.
-                  </p>
-                </div>
-              </div>
-              <div class="how_to_list mb16">
-                <h4>5.</h4>
-                <div>
-                  <h5>Deleting Cards</h5>
-                  <p>
-                    Once a task is completed, you can either move it to the
-                    "Done" list or delete it. Deleting a card will permanently
-                    remove it from the board. Please exercise caution when
-                    deleting cards, as this action is irreversible. Remember
-                    that using
-                    <span class="highlight-join">Join</span> effectively
-                    requires consistent updates from you and your team to ensure
-                    the board reflects the current state of your project. Have
-                    more questions about
-                    <span class="highlight-join">Join</span>? Feel free to
-                    contact us at
-                    <a href="mailto:sven.degen1998@gmail.com">
-                      sven.degen1998@gmail.com</a
-                    >. We're here to help you!
-                  </p>
-                </div>
-              </div>
-              <h3 class="mb80">
-                Enjoy using <span class="highlight-join">Join</span>!
-              </h3>
-            </div>
+
+            <h3>Proprietary rights</h3>
+            <p class="mb16">
+              Aside from the design owned by <span class="highlight-join">Developer Akademie GmbH</span>, we, the
+              listed students, retain all proprietary rights in <span class="highlight-join">Join</span>, including
+              any associated copyrighted material, trademarks, and other
+              proprietary information.
+            </p>
+            <h3>Use of the product</h3>
+            <p class="mb16">
+              <span class="highlight-join">Join</span> is intended to be used for lawful purposes only, in
+              accordance with all applicable laws and regulations. Any use of
+              <span class="highlight-join">Join</span> for illegal activities, or to harass, harm, threaten, or
+              intimidate another person, is strictly prohibited. You are solely
+              responsible for your interactions with other users of <span class="highlight-join">Join</span>.
+            </p>
+            <h3>Disclaimer of warranties and limitation of liability </h3>
+            <p class="mb80">
+              <span class="highlight-join">Join</span> is
+              provided "as is" without warranty of any kind, whether express or
+              implied, including but not limited to the implied warranties of
+              merchantability, fitness for a particular purpose, and
+              non-infringement. In no event will we, the listed students, or the
+              Developer Akademie, be liable for any direct, indirect,
+              incidental, special, consequential or exemplary damages, including
+              but not limited to, damages for loss of profits, goodwill, use,
+              data, or other intangible losses, even if we have been advised of
+              the possibility of such damages, arising out of or in connection
+              with the use or performance of <span class="highlight-join">Join</span>.
+            </p>
           </div>
         </section>
       </main>
