styled privacy policy

--- a/privacy_police.html
+++ b/privacy_police.html
@@ -239,27 +239,18 @@
 
           <h3 class="mb32">TABLE OF CONTENTS</h3>
 
-          <ul class="mb32">
-            <li><a href="#1">HOW DO WE PROCESS YOUR INFORMATION?</a></li>
-            <li><a href="#2">WHAT INFORMATION DO WE COLLECT?</a></li>
-            <li>
-              <a href="#3"
-                >WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL
-                INFORMATION?</a
-              >
-            </li>
-            <li>
-              <a href="#4"
-                >WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</a
-              >
-            </li>
-            <li><a href="#5">HOW LONG DO WE KEEP YOUR INFORMATION?</a></li>
-            <li><a href="#6">DO WE COLLECT INFORMATION FROM MINORS?</a></li>
-            <li><a href="#7">WHAT ARE YOUR PRIVACY RIGHTS?</a></li>
-            <li><a href="#8">CONTROLS FOR DO-NOT-TRACK FEATURES</a></li>
-            <li><a href="#9">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
-            <li><a href="#10">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
-            <li>
+          <ul class="mb32 link-list">
+            <li class="mb8"><a href="#1">HOW DO WE PROCESS YOUR INFORMATION?</a></li>
+            <li class="mb8"><a href="#2">WHAT INFORMATION DO WE COLLECT?</a></li>
+            <li class="mb8"><a href="#3">WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR PERSONAL INFORMATION?</a></li>
+            <li class="mb8"><a href="#4">WHEN AND WITH WHOM DO WE SHARE YOUR PERSONAL INFORMATION?</a></li>
+            <li class="mb8"><a href="#5">HOW LONG DO WE KEEP YOUR INFORMATION?</a></li>
+            <li class="mb8"><a href="#6">DO WE COLLECT INFORMATION FROM MINORS?</a></li>
+            <li class="mb8"><a href="#7">WHAT ARE YOUR PRIVACY RIGHTS?</a></li>
+            <li class="mb8"><a href="#8">CONTROLS FOR DO-NOT-TRACK FEATURES</a></li>
+            <li class="mb8"><a href="#9">DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
+            <li class="mb8"><a href="#10">HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
+            <li class="mb8">
               <a href="#11"
                 >HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM
                 YOU?</a
