--- a/legal_notice.html
+++ b/legal_notice.html
@@ -187,9 +187,7 @@
           <h2>Legal Notice</h2>
 
           <div class="instructions">
-            <h3 class="mb16">
-              Imprint 
-            </h3>
+            <h3 class="mb16">Imprint</h3>
             <p class="mb16">
               Sven Degen <br />
               Ifenthalerstrasse 30 <br />
@@ -202,24 +200,28 @@
             </p>
             <h3>Acceptance of terms</h3>
             <p class="mb16">
-              By accessing and using <span class="highlight-join">Join</span> (Product), you acknowledge and agree
-              to the following terms and conditions, and any policies,
-              guidelines, or amendments thereto that may be presented to you
-              from time to time. We, the listed students, may update or change
-              the terms and conditions from time to time without notice.
+              By accessing and using
+              <span class="highlight-join">Join</span> (Product), you
+              acknowledge and agree to the following terms and conditions, and
+              any policies, guidelines, or amendments thereto that may be
+              presented to you from time to time. We, the listed students, may
+              update or change the terms and conditions from time to time
+              without notice.
             </p>
 
             <h3>Scope and ownership of the product</h3>
             <p class="mb16">
-              <span class="highlight-join">Join</span> has been developed as part of a student group project in a
-              web development bootcamp at the <span class="highlight-join">Developer Akademie GmbH</span>. It has an
-              educational purpose and is not intended for extensive personal &amp;
-              business usage. As such, we cannot guarantee consistent
-              availability, reliability, accuracy, or any other aspect of
-              quality regarding this Product.
+              <span class="highlight-join">Join</span> has been developed as
+              part of a student group project in a web development bootcamp at
+              the <span class="highlight-join">Developer Akademie GmbH</span>.
+              It has an educational purpose and is not intended for extensive
+              personal &amp; business usage. As such, we cannot guarantee
+              consistent availability, reliability, accuracy, or any other
+              aspect of quality regarding this Product.
             </p>
             <p class="mb16">
-              The design of <span class="highlight-join">Join</span> is owned by the <span class="highlight-join">Developer Akademie GmbH</span>.
+              The design of <span class="highlight-join">Join</span> is owned by
+              the <span class="highlight-join">Developer Akademie GmbH</span>.
               Unauthorized use, reproduction, modification, distribution, or
               replication of the design is strictly prohibited. Here is a
               step-by-step guide on how to use
@@ -227,33 +229,52 @@
 
             <h3>Proprietary rights</h3>
             <p class="mb16">
-              Aside from the design owned by <span class="highlight-join">Developer Akademie GmbH</span>, we, the
-              listed students, retain all proprietary rights in <span class="highlight-join">Join</span>, including
-              any associated copyrighted material, trademarks, and other
-              proprietary information.
+              Aside from the design owned by
+              <span class="highlight-join">Developer Akademie GmbH</span>, we,
+              the listed students, retain all proprietary rights in
+              <span class="highlight-join">Join</span>, including any associated
+              copyrighted material, trademarks, and other proprietary
+              information.
             </p>
             <h3>Use of the product</h3>
             <p class="mb16">
-              <span class="highlight-join">Join</span> is intended to be used for lawful purposes only, in
-              accordance with all applicable laws and regulations. Any use of
-              <span class="highlight-join">Join</span> for illegal activities, or to harass, harm, threaten, or
-              intimidate another person, is strictly prohibited. You are solely
-              responsible for your interactions with other users of <span class="highlight-join">Join</span>.
+              <span class="highlight-join">Join</span> is intended to be used
+              for lawful purposes only, in accordance with all applicable laws
+              and regulations. Any use of
+              <span class="highlight-join">Join</span> for illegal activities,
+              or to harass, harm, threaten, or intimidate another person, is
+              strictly prohibited. You are solely responsible for your
+              interactions with other users of
+              <span class="highlight-join">Join</span>.
             </p>
-            <h3>Disclaimer of warranties and limitation of liability </h3>
-            <p class="mb80">
-              <span class="highlight-join">Join</span> is
-              provided "as is" without warranty of any kind, whether express or
-              implied, including but not limited to the implied warranties of
+            <h3>Disclaimer of warranties and limitation of liability</h3>
+            <p class="mb16">
+              <span class="highlight-join">Join</span> is provided "as is"
+              without warranty of any kind, whether express or implied,
+              including but not limited to the implied warranties of
               merchantability, fitness for a particular purpose, and
               non-infringement. In no event will we, the listed students, or the
-              Developer Akademie, be liable for any direct, indirect,
+              <span class="highlight-join">Developer Akademie</span>, be liable for any direct, indirect,
               incidental, special, consequential or exemplary damages, including
               but not limited to, damages for loss of profits, goodwill, use,
               data, or other intangible losses, even if we have been advised of
               the possibility of such damages, arising out of or in connection
-              with the use or performance of <span class="highlight-join">Join</span>.
+              with the use or performance of
+              <span class="highlight-join">Join</span>.
             </p>
+            <h3>Indemnity</h3>
+            <p class="mb16">
+              You agree to indemnify, defend and hold harmless us, the listed
+              students, the <span class="highlight-join">Developer Akademie</span>, and our affiliates, partners,
+              officers, directors, agents, and employees, from and against any
+              claim, demand, loss, damage, cost, or liability (including
+              reasonable legal fees) arising out of or relating to your use of
+              <span class="highlight-join">Join</span> and/or your breach of this Legal Notice.
+            </p>
+            <p class="mb16">
+              For any questions or notices, please contact us at
+            </p>
+            <p class="mb80">[Contact Email]. Date: July 26, 2023.</p>
           </div>
         </section>
       </main>
