deleted the gap class in the summary.html and changing the position from the summary-board-urgent element. fixed the size. and edit the hover animation from the text inside the tasks-In-Deadline element.

--- a/summary.html
+++ b/summary.html
@@ -98,7 +98,7 @@
         <section class="summary-container">
           <section class="summary-board-container">
             <div class="summary-board-panels">
-              <div class="summary-board-panel s-panel-gap">
+              <div class="summary-board-panel">
                 <div class="icon-wrap">
                   <svg
                     class="icon-edit"
@@ -127,7 +127,7 @@
                 </div>
               </div>
 
-              <div class="summary-board-panel s-panel-gap">
+              <div class="summary-board-panel">
                 <div class="icon-wrap-2">
                   <svg
                     class="icon-arrow"
@@ -154,9 +154,9 @@
             </div>
 
             <div class="summary-board-panels">
-              <div class="summary-board-panel s-panel-gap">
+              <div class="summary-board-panel">
                 <div class="summary-board-urgent">
-                  <img src="./assets/svg/prio.svg" class="s-img" alt="" />
+                  <img src="./assets/svg/prio.svg" class="s-img-2" alt="" />
                   <div class="tasks-In-Urgent">
                     <div class="s-txt-64-600">1</div>
                     <div class="s-txt-16-400">Urgent</div>
