summary board panels linked to the board site. design and animation not changed.

--- a/summary.html
+++ b/summary.html
@@ -98,7 +98,7 @@
         <section class="summary-container">
           <section class="summary-board-container">
             <div class="summary-board-panels">
-              <div class="summary-board-panel">
+              <a href="./board.html" class="summary-board-panel">
                 <div class="icon-wrap">
                   <svg
                     class="icon-edit"
@@ -125,9 +125,9 @@
                   <div class="s-txt-64-600">2</div>
                   <div class="s-txt-20-400">ToDo</div>
                 </div>
-              </div>
+              </a>
 
-              <div class="summary-board-panel">
+              <a href="./board.html" class="summary-board-panel">
                 <div class="icon-wrap-2">
                   <svg
                     class="icon-arrow"
@@ -150,11 +150,11 @@
                   <div class="s-txt-64-600">1</div>
                   <div class="s-txt-20-400">Done</div>
                 </div>
-              </div>
+              </a>
             </div>
 
             <div class="summary-board-panels">
-              <div class="summary-board-panel">
+              <a href="./board.html" class="summary-board-panel">
                 <div class="summary-board-urgent">
                   <img src="./assets/svg/prio.svg" class="s-img-2" alt="" />
                   <div class="tasks-In-Urgent">
@@ -172,24 +172,30 @@
                   <div class="s-txt-21-700">October 16 2022</div>
                   <div class="s-txt-16-400">upcoming Deadline</div>
                 </div>
-              </div>
+              </a>
             </div>
 
             <div class="summary-board-panels">
-              <div class="summary-board-panel tasks-In-Board">
+              <a href="./board.html" class="summary-board-panel tasks-In-Board">
                 <div class="s-txt-64-600">5</div>
                 <div class="s-txt-20-400">Tasks in<br />Board</div>
-              </div>
+              </a>
 
-              <div class="summary-board-panel tasks-In-Progress">
+              <a
+                href="./board.html"
+                class="summary-board-panel tasks-In-Progress"
+              >
                 <div class="s-txt-64-600">2</div>
                 <div class="s-txt-20-400">Tasks in<br />Progress</div>
-              </div>
+              </a>
 
-              <div class="summary-board-panel awaiting-In-Feedback">
+              <a
+                href="./board.html"
+                class="summary-board-panel awaiting-In-Feedback"
+              >
                 <div class="s-txt-64-600">2</div>
                 <div class="s-txt-20-400">Awaiting<br />Feedback</div>
-              </div>
+              </a>
             </div>
           </section>
 
