--- a/privacy_police.html
+++ b/privacy_police.html
@@ -186,8 +186,9 @@
         <section>
           <h2>PRIVACY POLICY</h2>
           <p class="mb32">
-            Last updated September 30, 2025 This Privacy Notice for __________
-            ('we', 'us', or 'our'), describes how and why we might access,
+            Last updated September 30, 2025 This Privacy Notice for 
+            <span style="color:red;font-weight:700">__________ ('we', 'us', or 'our')</span>
+            , describes how and why we might access,
             collect, store, use, and/or share ('process') your personal
             information when you use our services ('Services'), including when
             you: Visit our website at test.testurl or any website of ours that
@@ -198,7 +199,7 @@
             how your personal information is processed. If you do not agree with
             our policies and practices, please do not use our Services. If you
             still have any questions or concerns, please contact us at
-            test@test.com.
+            <span style="font-weight:700; color:darkgreen">test@test.com</span>.
           </p>
 
           <h3 class="mb32">SUMMARY OF KEY POINTS</h3>
@@ -231,7 +232,7 @@
             applicable privacy law may mean you have certain rights regarding
             your personal information. Learn more about your privacy rights. How
             do you exercise your rights? The easiest way to exercise your rights
-            is by visiting help.html.join, or by contacting us. We will consider
+            is by visiting <span style="color:darkblue;font-weight:700">help.html.join</span>, or by contacting us. We will consider
             and act upon any request in accordance with applicable data
             protection laws. Want to learn more about what we do with any
             information we collect? Review the Privacy Notice in full.
@@ -361,7 +362,7 @@
             account and take reasonable measures to promptly delete such data
             from our records. If you become aware of any data we may have
             collected from children under age 18, please contact us at
-            test@test.com.
+            <span style="font-weight:700; color:darkgreen">test@test.com</span>.
           </p>
           <h3 class="mb32" id="7">WHAT ARE YOUR PRIVACY RIGHTS?</h3>
           <p class="mb32">
@@ -404,7 +405,7 @@
             problems, assist with any investigations, enforce our legal terms
             and/or comply with applicable legal requirements. If you have
             questions or comments about your privacy rights, you may email us at
-            test@test.com.
+            <span style="font-weight:700; color:darkgreen">test@test.com</span>.
           </p>
           <h3 class="mb32" id="8">CONTROLS FOR DO-NOT-TRACK FEATURES</h3>
           <p class="mb32">
@@ -436,9 +437,12 @@
           </h3>
           <p class="mb32">
             If you have questions or comments about this notice, you may email
-            us at test@test.com or contact us by post at: __________
-            test_Address line 1 test_City / town, test_State / territory /
-            province test_ZIP code / postal code Germany
+            us at <span style="font-weight:700; color:darkgreen">test@test.com</span> or contact us by post at: 
+            <span style="color:red;font-weight:700">
+              __________test_Address line 1 test_City / town, test_State / territory /
+              province test_ZIP code / postal code Germany
+            </span>
+            
           </p>
           <h3 class="mb32" id="11">
             HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?
@@ -450,7 +454,7 @@
             the right to withdraw your consent to our processing of your
             personal information. These rights may be limited in some
             circumstances by applicable law. To request to review, update, or
-            delete your personal information, please visit: help.html.join.
+            delete your personal information, please visit: <span style="color:darkblue;font-weight:700">help.html.join</span>.
           </p>
         </section>
       </main>
