put the h4 tags on the Board-Header

--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
             </div>
         </nav>
         <main class="contacts-main-content">
-            <header>
+            <header class="main-header">
                 <div class="content-limit-header">
                     <div class="header-text">Kanban Project Management Tool</div>
                     <div class="header-profil">
