--- a/help.html
+++ b/help.html
@@ -174,7 +174,7 @@
         </div>
       </nav>
       <main>
-        <header>
+        <header class="main-header">
           <div class="content-limit-header">
             <div class="header-text">Kanban Project Management Tool</div>
             <div class="header-profil">
