--- a/board.html
+++ b/board.html
@@ -102,7 +102,7 @@
             </div>
         </nav>
       <main>
-        <header>
+        <header class="main-header">
                 <div class="content-limit-header">
                     <div class="header-text">Kanban Project Management Tool</div>
                     <div class="header-profil">
@@ -110,67 +110,79 @@
                         <div class="profil-header"></div>
                     </div>
                 </div>
-            </header>
+        </header>
         <section class="board-page">
           <header class="board-header">
-            <h2>Board</h2>
-            <div class="board-actions">
-              <form action="search-bar" class="search-task">
-                <label for="search-bar">
-                  <input type="text" placeholder="Find Task" id="search-bar" />
-                  <div class="search-button-section">
-                    <div class="search-divider"></div>
-                    <div class="search-button">
-                      <svg
-                        width="18"
-                        height="18"
-                        viewBox="0 0 18 18"
-                        fill="none"
-                      >
-                        <path
-                          d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
-                        />
-                      </svg>
+            <section class="search-section">
+              <h2>Board</h2>
+              <div class="board-actions">
+                <form action="search-bar" class="search-task">
+                  <label for="search-bar">
+                    <input type="text" placeholder="Find Task" id="search-bar" />
+                    <div class="search-button-section">
+                      <div class="search-divider"></div>
+                      <div class="search-button">
+                        <svg
+                          width="18"
+                          height="18"
+                          viewBox="0 0 18 18"
+                          fill="none"
+                        >
+                          <path
+                            d="M6.71181 13.2137C4.89463 13.2137 3.35669 12.5843 2.098 11.3256C0.839307 10.0669 0.209961 8.52899 0.209961 6.71181C0.209961 4.89463 0.839307 3.35669 2.098 2.098C3.35669 0.839307 4.89463 0.209961 6.71181 0.209961C8.52899 0.209961 10.0669 0.839307 11.3256 2.098C12.5843 3.35669 13.2137 4.89463 13.2137 6.71181C13.2137 7.44535 13.097 8.13721 12.8636 8.7874C12.6302 9.43758 12.3134 10.0127 11.9133 10.5129L17.5149 16.1145C17.6983 16.2979 17.79 16.5313 17.79 16.8147C17.79 17.0981 17.6983 17.3315 17.5149 17.5149C17.3315 17.6983 17.0981 17.79 16.8147 17.79C16.5313 17.79 16.2979 17.6983 16.1145 17.5149L10.5129 11.9133C10.0127 12.3134 9.43758 12.6302 8.7874 12.8636C8.13721 13.097 7.44535 13.2137 6.71181 13.2137ZM6.71181 11.2131C7.96217 11.2131 9.02497 10.7755 9.90022 9.90022C10.7755 9.02497 11.2131 7.96217 11.2131 6.71181C11.2131 5.46145 10.7755 4.39865 9.90022 3.5234C9.02497 2.64815 7.96217 2.21053 6.71181 2.21053C5.46145 2.21053 4.39865 2.64815 3.5234 3.5234C2.64815 4.39865 2.21053 5.46145 2.21053 6.71181C2.21053 7.96217 2.64815 9.02497 3.5234 9.90022C4.39865 10.7755 5.46145 11.2131 6.71181 11.2131Z"
+                          />
+                        </svg>
+                      </div>
                     </div>
-                  </div>
-                </label>
-              </form>
-              <button>
-                Add task <img src="./img/icons/add.png" alt="add button" />
-              </button>
-            </div>
+                  </label>
+                </form>
+                <button>
+                  Add task <img src="./img/icons/add.png" alt="add button" />
+                </button>
+              </div>
+            </section>
+            <section class="task-assignment">
+              <section>
+                <h4>To do</h4>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
+                  <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2"/>
+                  <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </section>
+              <section>
+                <h4>In progress</h4>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
+                  <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2"/>
+                  <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </section>
+              <section>
+                <h4>Await feedback</h4>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
+                  <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2"/>
+                  <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </section>
+              <section>
+                <h4>Done</h4>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none">
+                  <rect x="1" y="1.5" width="22" height="22" rx="7" stroke-width="2"/>
+                  <path d="M12 8.5V16.5" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M16 12.5754L8 12.5754" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </section>
+            </section>
           </header>
           <section class="kanban-board">
             <section class="kanban-column">
-              <header>
-                <h4>To Do</h4>
-                <img
-                  src="./img/icons/add_box_hover.png"
-                  alt="add task button"
-                />
-                <img
-                  src="./img/icons/add_box.png"
-                  alt="add task button"
-                  class="add-task-bottom"
-                />
-              </header>
               <div class="task-list">
                 <div class="no-task">No tasks To do</div>
               </div>
             </section>
             <section class="kanban-column">
-              <header>
-                <h4>In progress</h4>
-                <img
-                  src="./img/icons/add_box_hover.png"
-                  alt="add task button"
-                />
-                <img
-                  src="./img/icons/add_box.png"
-                  alt="add task button"
-                  class="add-task-bottom"
-                />
-              </header>
               <div class="task-list">
                 <div class="task">
                   <p class="task-label">User Story</p>
@@ -198,18 +210,6 @@
               </div>
             </section>
             <section class="kanban-column">
-              <header>
-                <h4>Await feedback</h4>
-                <img
-                  src="./img/icons/add_box_hover.png"
-                  alt="add task button"
-                />
-                <img
-                  src="./img/icons/add_box.png"
-                  alt="add task button"
-                  class="add-task-bottom"
-                />
-              </header>
               <div class="task-list">
                 <div class="task">
                   <p
@@ -249,9 +249,6 @@
               </div>
             </section>
             <section class="kanban-column">
-              <header>
-                <h4>Done</h4>
-              </header>
               <div class="task-list">
                 <div class="task">
                   <p class="task-label">User Story</p>
