--- a/summary.html
+++ b/summary.html
@@ -104,7 +104,7 @@
     </nav>
 
     <section class="main">
-      <header>
+      <header class="main-header">
         <div class="content-limit-header">
           <div class="header-text">Kanban Project Management Tool</div>
           <div class="header-profil">
