changed functions for renderContact

--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
                     <div class="contact-list-container">
                         <div class="contact-list-content">
 
-                            <section class="contact-list">
+                            <section id="contact_list" class="contact-list">
                                 <div class="contact-list-head first-list-element">
                                     <h4 class="contact-list-section-head">A</h4>
                                 </div>
