dummy name for summary greeting changed

--- a/summary.html
+++ b/summary.html
@@ -182,7 +182,7 @@
         <section class="summary-greeting-container">
           <div class="summary-greeting" id="greeting-text"></div>
           <div class="summary-greeting" id="summary-greeting-name">
-            Max Mustermann
+            Sofia Müller
           </div>
         </section>
       </section>
