onclick on Task added, open Dialog works smooth now

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-    <main id="main">
+    <main id="main" class="login_page">
         <!-- Log In and Sign Up will be render here -->
     </main>
 
