Rename .AD class to .ad in HTML and CSS
Updated the section class in add_task.html from 'AD' to 'ad' and changed all corresponding CSS selectors in style/add_task.css to use '.ad' instead of '.AD' for consistency and improved naming convention.

--- a/add_task.html
+++ b/add_task.html
@@ -190,7 +190,7 @@
             </div>
           </div>
         </header>
-        <section class="AD">
+        <section class="ad">
           <h2>Add Task</h2>
           <form action="">
             <div class="form_wrapper">
